Change otrs to ligero texts

--- a/Kernel/Config.pm.dist
+++ b/Kernel/Config.pm.dist
@@ -1,5 +1,5 @@
 # --
-# Copyright (C) 2001-2018 OTRS AG, https://otrs.com/
+# Copyright (C) 2018-2018 LIGERO AG, https://complemento.net.br/
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -7,12 +7,12 @@
 # --
 #  Note:
 #
-#  -->> Most OTRS configuration should be done via the OTRS web interface
+#  -->> Most LIGERO configuration should be done via the LIGERO web interface
 #       and the SysConfig. Only for some configuration, such as database
 #       credentials and customer data source changes, you should edit this
 #       file. For changes do customer data sources you can copy the definitions
 #       from Kernel/Config/Defaults.pm and paste them in this file.
-#       Config.pm will not be overwritten when updating OTRS.
+#       Config.pm will not be overwritten when updating LIGERO.
 # --
 
 package Kernel::Config;
@@ -32,12 +32,12 @@ sub Load {
     $Self->{DatabaseHost} = '127.0.0.1';
 
     # The database name
-    $Self->{Database} = 'otrs';
+    $Self->{Database} = 'ligero';
 
     # The database user
-    $Self->{DatabaseUser} = 'otrs';
+    $Self->{DatabaseUser} = 'ligero';
 
-    # The password of database user. You also can use bin/otrs.Console.pl Maint::Database::PasswordCrypt
+    # The password of database user. You also can use bin/ligero.Console.pl Maint::Database::PasswordCrypt
     # for crypted passwords
     $Self->{DatabasePw} = 'some-pass';
 
@@ -50,7 +50,7 @@ sub Load {
     # if you want to use a TCP/IP connection
 #    $Self->{DatabaseDSN} = "DBI:Pg:dbname=$Self->{Database};host=$Self->{DatabaseHost};";
 
-    # The database DSN for Microsoft SQL Server - only supported if OTRS is
+    # The database DSN for Microsoft SQL Server - only supported if LIGERO is
     # installed on Windows as well
 #    $Self->{DatabaseDSN} = "DBI:ODBC:driver={SQL Server};Database=$Self->{Database};Server=$Self->{DatabaseHost},1433";
 
@@ -64,7 +64,7 @@ sub Load {
     # ---------------------------------------------------- #
     # fs root directory
     # ---------------------------------------------------- #
-    $Self->{Home} = '/opt/otrs';
+    $Self->{Home} = '/opt/ligero';
 
     # ---------------------------------------------------- #
     # insert your own config settings "here"               #
