--- a/scripts/apache2-httpd.include.conf
+++ b/scripts/apache2-httpd.include.conf
@@ -1,23 +1,23 @@
 # --
-# added for OTRS (http://otrs.org/)
+# added for LIGERO (http://ligero.org/)
 # --
 
-ScriptAlias /otrs/ "/opt/otrs/bin/cgi-bin/"
-Alias /otrs-web/ "/opt/otrs/var/httpd/htdocs/"
+ScriptAlias /ligero/ "/opt/ligero/bin/cgi-bin/"
+Alias /ligero-web/ "/opt/ligero/var/httpd/htdocs/"
 
 <IfModule mod_perl.c>
 
     # Setup environment and preload modules
-    Perlrequire /opt/otrs/scripts/apache2-perl-startup.pl
+    Perlrequire /opt/ligero/scripts/apache2-perl-startup.pl
 
     # Reload Perl modules when changed on disk
     PerlModule Apache2::Reload
     PerlInitHandler Apache2::Reload
 
     # general mod_perl2 options
-    <Location /otrs>
-#        ErrorDocument 403 /otrs/customer.pl
-        ErrorDocument 403 /otrs/index.pl
+    <Location /ligero>
+#        ErrorDocument 403 /ligero/customer.pl
+        ErrorDocument 403 /ligero/index.pl
         SetHandler  perl-script
         PerlResponseHandler ModPerl::Registry
         Options +ExecCGI
@@ -40,13 +40,13 @@ Alias /otrs-web/ "/opt/otrs/var/httpd/htdocs/"
     </Location>
 
     # mod_perl2 options for GenericInterface
-    <Location /otrs/nph-genericinterface.pl>
+    <Location /ligero/nph-genericinterface.pl>
         PerlOptions -ParseHeaders
     </Location>
 
 </IfModule>
 
-<Directory "/opt/otrs/bin/cgi-bin/">
+<Directory "/opt/ligero/bin/cgi-bin/">
     AllowOverride None
     Options +ExecCGI -Includes
 
@@ -72,7 +72,7 @@ Alias /otrs-web/ "/opt/otrs/var/httpd/htdocs/"
 
 </Directory>
 
-<Directory "/opt/otrs/var/httpd/htdocs/">
+<Directory "/opt/ligero/var/httpd/htdocs/">
     AllowOverride None
 
     <IfModule mod_version.c>
@@ -106,7 +106,7 @@ Alias /otrs-web/ "/opt/otrs/var/httpd/htdocs/"
 
 # Allow access to public interface for unauthenticated requests on systems with set-up authentication.
 # Will work only for RegistrationUpdate, since page resources are still not be loaded.
-# <Location /otrs/public.pl>
+# <Location /ligero/public.pl>
 #     <IfModule mod_version.c>
 #         <IfVersion < 2.4>
 #             Order allow,deny
@@ -124,28 +124,28 @@ Alias /otrs-web/ "/opt/otrs/var/httpd/htdocs/"
 
 <IfModule mod_headers.c>
     # Cache css-cache for 30 days
-    <Directory "/opt/otrs/var/httpd/htdocs/skins/*/*/css-cache">
+    <Directory "/opt/ligero/var/httpd/htdocs/skins/*/*/css-cache">
         <FilesMatch "\.(css|CSS)$">
             Header set Cache-Control "max-age=2592000 must-revalidate"
         </FilesMatch>
     </Directory>
 
     # Cache css thirdparty for 4 hours, including icon fonts
-    <Directory "/opt/otrs/var/httpd/htdocs/skins/*/*/css/thirdparty">
+    <Directory "/opt/ligero/var/httpd/htdocs/skins/*/*/css/thirdparty">
         <FilesMatch "\.(css|CSS|woff|svg)$">
             Header set Cache-Control "max-age=14400 must-revalidate"
         </FilesMatch>
     </Directory>
 
     # Cache js-cache for 30 days
-    <Directory "/opt/otrs/var/httpd/htdocs/js/js-cache">
+    <Directory "/opt/ligero/var/httpd/htdocs/js/js-cache">
         <FilesMatch "\.(js|JS)$">
             Header set Cache-Control "max-age=2592000 must-revalidate"
         </FilesMatch>
     </Directory>
 
     # Cache js thirdparty for 4 hours
-    <Directory "/opt/otrs/var/httpd/htdocs/js/thirdparty/">
+    <Directory "/opt/ligero/var/httpd/htdocs/js/thirdparty/">
         <FilesMatch "\.(js|JS)$">
             Header set Cache-Control "max-age=14400 must-revalidate"
         </FilesMatch>
